
=======================================================
            WanT code:  Log of Changes 
=======================================================

11 May 2005      Atomic projections fully implemented and tested; Test5 changed and 
                 updated. (AF)

10 May 2005      Merge between the main branch and the one with sp3 orbitals implemented
                 (together with a new impl of spherical harmonics) completed; bugs
                 fixed. (AF)

09 May 2005      Possibility to use random unitary matrixes added both in disentangle
                 and wannier. init_at_1.f90 and atomic_wfc.f90 added (from Espresso) 
                 in order to deal with atomic starting centers. (AF)

06 May 2005      Test5 joint to Test2; other input changed; particularly, the 
                 unitary_thr parameters is no longer needed in any test (due to the bug
                 fix in Mkb calculation). (AF)

04 May 2005      Restart is finally checked also in wannier. (AF)

02 May 2005      Fixed a long living bug in set_overlap_map; symmetrization of 
                 overlap is now numerically verified. domega.f90 routine completely
                 updated: time consume and memory usage largely reduced. (AF)

28 Apr 2005      Test8 (isolated benzene molecule) added. Summary routine updated
                 in order to manage wrong bshell choises.

27 Apr 2005      Further simplifications and code elimination in wannier.f90
                 (cfunc_exp* variables deleted). (AF)

22 Apr 2005      Overlap_extract updated with the use of blas in matrix 
                 multiplications. Overlap_update routine added (blas used). (AF)
                 Localization init added; phases routine re-introduced in the 
                 wannier localization. Restart in wannier implemented but not yet checked.

20 Apr 2005      "Habemus restartem" in disentangle (read/write) and the write procedure